[package]
name = "unleash-proxy-rust"
version = "0.1.0"
authors = ["Robert Collins <robert.collins@cognite.com>"]
edition = "2018"
license = "unlicensed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
chrono = { version = "0.4.11", features = ["serde"] }
enum-map = "0.6.2"
env_logger = "0.8.2"
futures = "0.3.8"
futures-timer = "3.0.2"
http-client = "6.2.0"
http-types = "2.8.0"
hyper = "0.13"
ipaddress = "0.1.2"
log = "0.4.8"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "0.3", features = ["full"] }
unleash-api-client = "0.6.0"
url = "2.2.0"
