[package]
authors = ["Robert Collins <robert.collins@cognite.com>"]
edition = "2018"
license = "unlicensed"
name = "unleash-proxy-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
chrono = { version = "0.4.19", features = ["serde"] }
enum-map = "1.1.1"
env_logger = "0.9.0"
futures = "0.3.21"
futures-timer = "3.0.2"
http-client = "6.5.1"
http-types = "2.12.0"
hyper = { version = "0.14.17", features = ["full"] }
ipaddress = "0.1.2"
log = "0.4.8"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "1.17.0", features = ["full"] }
unleash-api-client = "0.6.0"
url = "2.2.2"
